fix missing bullet.svg file and add run script

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -154,7 +154,7 @@ blockquote {
 
 /* Lists */
 ul {
-  list-style-image:url("../images/bullet.svg")
+  list-style-image:url("/assets/img/bullet.svg")
 }
 
 /* Boostrap Helper Classes */
